--- a/style.css
+++ b/style.css
@@ -24,6 +24,14 @@ h2 {
   padding-bottom: 4px;
 }
 
+p {
+  font-size: 20px;
+  color: #131313;
+  margin-bottom: 2px;
+  text-align: left;
+}
+
+
 /* ====================
    NFTS E CHECKBOXES
 ======================= */
