puxando api pra marcar as NFTs e skills q possui
possivelmente n ira funcionar por conta do get

--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
 ======================= */
 body {
   font-family: 'Comic Neue', cursive, 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background: linear-gradient(to bottom, #3d3c39, #ffe8b3);
+  background: linear-gradient(to bottom, #080808, #082f81);
   padding: 30px;
   color: #4e4e4e;
 }
