--- a/public/style.css
+++ b/public/style.css
@@ -146,8 +146,8 @@ input[type="checkbox"]:checked + .skill-img {
 ======================= */
 .linha-selects {
   display: flex;
-  justify-content: center;
-  gap: 30px;
+  justify-content: left;
+  gap: 20px;
   margin-top: 20px;
   flex-wrap: wrap;
   align-items: flex-end;
