--- a/public/style.css
+++ b/public/style.css
@@ -80,8 +80,8 @@ p {
 }
 
 .nft-img, .skill-img {
-  width: 20px;
-  height: 20px;
+  width: 30px;
+  height: 30px;
   object-fit: contain;
   border-radius: 12px;
   background-color: #2c2c2c;
@@ -165,9 +165,11 @@ input[type="checkbox"]:disabled + .nft-img:hover {
   justify-content: left;
   gap: 20px;
   margin-top: 20px;
+  margin-bottom: 10px;
   flex-wrap: wrap;
   align-items: flex-end;
 }
+
 
 .select-group {
   display: flex;
@@ -424,4 +426,37 @@ td input.quantidade-input {
 .texto-skill-desbloquear {
   flex-basis: 100%; /* ocupa toda a largura */
   white-space: normal; /* garante quebras de linha */
+}
+
+/* ====================
+   TABELA MINERAIS DE RESUMO FIXA
+======================= */
+
+.tabela-minerais {
+  width: 100%;
+  border-collapse: separate;
+  border-spacing: 0;
+  margin-top: 30px;
+  font-size: 14px;
+  border-radius: 10px;
+  overflow: hidden;
+  border: 2px solid #333;
+}
+
+.tabela-minerais th, .tabela-minerais td {
+  padding: 5px 1px;
+  text-align: center;
+}
+
+.tabela-minerais th {
+  background-color: #333333;
+  color: #ffffff;
+}
+
+.tabela-minerais tr:nth-child(even) {
+  background-color: #2c2c2c;
+}
+
+.tabela-minerais tr:nth-child(odd) {
+  background-color: #242424;
 }
